# cpp_groupwork

./: README.md
Iza/: hw1.cpp
Mathias/Set 6/48/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  explanation.txt  main.cc  order.txt
Mathias/Set 6/48/dh/: alice.cc  aliceConst.cc  bobConst.cc  chooseAndCall.cc  dh.cc  dh.hh
Petros set2/: metadata.txt
Petros set2/10/: ascii.cc  letters  letters.cc  reverse
Petros set2/11/: reverse.cc
Petros set2/12/: a.out  complement.cc
Petros set2/13/: findNum  findNum.cc
Petros set2/14/: combinations.cc
Petros set2/9/: multiplicationTable  multiplicationTable.cc
Petros/46/: main.ih
Petros/set5Corrected/: metadata.txt
Petros/set6Submit/: metadata.txt
Petros/set7Submit/: metadata.txt
Petros/set7tmp/: metadata.txt
Valeriy/set2/: DescriptionExercise10.txt  DescriptionExercise11.txt  DescriptionExercise12.txt  DescriptionExercise13.txt  DescriptionExercise14.txt  DescriptionExercise16.txt  DescriptionExercise9.txt  complement  complement.cc  exercise  exercise10  exercise10.cc  exercise11  exercise13  exercise13.cc  exercise14  exercise16  exercise16.cc  exercise16Fixed.cc  exercise9.cc  icmbuild  reverse  reverse.cc
finalized_set2/: explain.txt
finalized_set2/16/: exercise16.cc
set1/: metadata.txt
set1/1/: descriptions.txt  explanation.txt  hello.cc  order.txt
set1/2/: declarationDefinition.txt  explanation.txt  order.txt
set1/3/: explanation.txt  majorAspects.txt  major_aspects.txt  order.txt
set1/4/: explanation.txt  order.txt  rule.txt
set1/5/: order.txt  (+3 more)
set3/: metadata.txt
(+955 files in other folders)
